--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lottie-react": "^2.4.0",
     "next": "13.1.2",
     "playwright": "^1.32.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.32.1",
